--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -30,14 +30,8 @@ body {
 }
 .navbar-default .navbar-toggle:focus .icon-bar,.navbar-default .navbar-toggle:hover .icon-bar {
     background-color: #dddddd;
-}a
+}
 /*Collapsable menu styling */
-.navbar-collapse .collapse in {
-    background-color: #ffffff;
-}
-.navbar-collapse .collapse {
-    background-color: #dddddd;
-}
 #header-nav {
     border: 2px solid #000000;
     height: auto;
@@ -70,6 +64,7 @@ body {
 }
 #nav-list a {
     font-size: 1.5em;
+    border: 2px solid #000000;
 }
 #nav-list a:hover {
     background: #E7E7E7;
